<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_trending"
            android:icon="@drawable/trending"
            android:title="@string/trending" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/explore"
            android:title="@string/explore" />
        <item
            android:id="@+id/nav_save"
            android:icon="@drawable/heart"
            android:title="@string/saved" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/mail"
                android:title="@string/email" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>