<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/InputTheme"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".fragments.VerifyOtpFragment">

    <TextView
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/just_quick"
        android:textSize="26sp"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/sit_back"/>

    <TextView
        android:gravity="start"
        android:textColor="@color/colorBlack"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_verification"
        style="@style/InputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:hint="@string/phone">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@android:color/transparent"
            android:inputType="phone" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/did_t_receive_the_code"/>

        <TextView
            android:id="@+id/tv_send_again"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/send_again"/>

        <TextView
            android:id="@+id/tv_timer"
            android:textSize="18sp"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_sign_in_up"
        android:layout_margin="20dp"
        android:text="@string/verify_code"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="@color/colorWhite"/>

    <ProgressBar
        android:id="@+id/pb_verifying_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/standard_charges_may_apply"/>

</LinearLayout>