<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_centerVertical="true"
    android:theme="@style/InputTheme"
    tools:context=".fragments.PhoneNumberAuth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_your_mobile_no"
            android:textColor="@color/colorBlack"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/enter_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/please_enter_your_phone_number_to_continue_using_helloji" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="250dp"
            app:lottie_fileName="social.json" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_phone"
            style="@style/InputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:helperText="Please do not enter +91"
            android:hint="@string/phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@android:color/transparent"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/pb_send_otp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_send_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="20dp"
            android:background="@drawable/btn_sign_in_up"
            android:text="@string/send_otp"
            android:enabled="false"
            android:textColor="@color/colorLightGrey" />

    </LinearLayout>

</RelativeLayout>